{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Mouse",
            "id": "0b2881da-18d0-430e-afdf-153aa72b5de9",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "84e79a5b-3163-44f8-96b3-60eb75c7c76e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "5a7c2c8c-bed7-4f1d-8595-fa48e043adfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7647cedd-7290-48b2-b66c-e4a95a45ebb1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "919226de-c5d3-477b-b9b3-815bd3ecad98",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}